--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,15 +11,15 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 17, 24, 39; /* Gray-900 */
+    --background-end-rgb: 17, 24, 39; /* Gray-900 */
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-      to bottom,
+      to bottom right,
       transparent,
       rgb(var(--background-end-rgb))
     )
@@ -31,3 +31,4 @@ body {
     text-wrap: balance;
   }
 }
+
