--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 17, 24, 39; /* Gray-900 */
-    --background-end-rgb: 17, 24, 39; /* Gray-900 */
+    --background-end-rgb: 26, 32, 44; /* Onyx Gray bg-gray-900 */
+    --background-start-rgb: 45, 55, 72; /* Charcoal bg-gray-900 */
   }
 }
 
