--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,16 +6,16 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-end-rgb: 26, 32, 44; /* Onyx Gray bg-gray-900 */
     --background-start-rgb: 45, 55, 72; /* Charcoal bg-gray-900 */
+    --background-end-rgb: 26, 32, 44; /* Onyx Gray bg-gray-900 */
   }
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0; /* Gray-900 */
-    --background-end-rgb: 0, 0, 0; /* Gray-900 */
+    --background-start-rgb: 45, 55, 72; /* Charcoal bg-gray-900 */
+    --background-end-rgb: 26, 32, 44; /* Onyx Gray bg-gray-900 */
   }
 }
 
